Add best date time to pick order
